<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tree Task</string>
    <string name="title_section1">Tasks</string>
    <string name="title_section2">Archive</string>
    <string name="edit_task">Edit task</string>
    <string name="supply_name">You must supply a name</string>
    <string name="description_less_than">Description must be less than</string>
    <string name="characters">characters</string>
    <string name="name_less_than">Name must be less than</string>
    <string name="preview">Preview</string>
    <string name="sure_to_delete">Are you sure you want to Delete this Task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_task">New Task</string>
    <string name="new_tree">New Tree</string>
    <string name="subtask">subtask</string>
    <string name="subtasks">subtasks</string>
    <string name="path">Path</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="drag_tab">Drag Tab</string>
    <string name="check">Check</string>
    <string name="add_task">Add a task</string>
    <string name="description_opt">Description (optional)</string>
    <string name="create_tree">Create Tree</string>
    <string name="create_task">Create Task</string>
    <string name="current_task">Current Task</string>
    <string name="whole_tree">Whole Tree</string>
    <string name="show_numbers">Show Numbers</string>
    <string name="show_description">Show Description</string>
    <string name="show_progress">Show progress</string>
    <string name="use_tabs">Use Tabs</string>
    <string name="share">Share</string>
    <string name="update">Update</string>
    <string name="delete_tree">Delete Tree</string>
    <string name="delete_task">Delete Task</string>
    <string name="tree_view">Tree View</string>
    <string name="export_task">Share/Export Task</string>
    <string name="about">About</string>
    <string name="drag_handle">drag handle</string>
    <string name="color">Change Color</string>
    <string name="settings">Settings</string>
    <string name="global_color_settings">Global Color Settings</string>
    <string name="default_color_settings">Default Task Color Settings</string>
    <string name="accent_colors">Global Accent Color Setting</string>
    <string name="accent_colors_des">Changes the color of the tab titles and other accents</string>
    <string name="prog_color">Progress bar colors</string>
    <string name="prog_color_des">Changes the color of the task progress bars</string>
    <string name="reset_settings">Reset all settings</string>
    <string name="sure_to_reset">Are you sure you want to reset all settings?</string>
    <string name="custom_color">Custom Color</string>
    <string name="color1">Color 1</string>
    <string name="color2">Color 2</string>
    <string name="color3">Color 3</string>
    <string name="color4">Color 4</string>
    <string name="color5">Color 5</string>
    <string name="add_sub_task">Add Sub-Task</string>
    <string name="change_weight">Change task weight</string>
    <string name="task_weight">Task weight</string>
    
    
    
    
    
</resources>