<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="general"
        android:title="@string/global_color_settings" >
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:defaultValue="@color/accentColor"
            android:key="accent_color"
            android:summary="@string/accent_colors_des"
            android:title="@string/accent_colors" />
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:defaultValue="@color/progDefault"
            android:key="prog_color"
            android:summary="@string/prog_color_des"
            android:title="@string/prog_color" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="general"
        android:title="@string/default_color_settings" >
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:defaultValue="@color/color1"
            android:key="color1"
            android:title="@string/color1" />
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:defaultValue="@color/color2"
            android:key="color2"
            android:title="@string/color2" />
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:defaultValue="@color/color3"
            android:key="color3"
            android:title="@string/color3" />
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:defaultValue="@color/color4"
            android:key="color4"
            android:title="@string/color4" />
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:defaultValue="@color/color5"
            android:key="color5"
            android:title="@string/color5" />
    </PreferenceCategory>

    <Preference
        android:key="reset_all"
        android:title="@string/reset_settings" />

</PreferenceScreen>