<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="80dp"
    android:background="@drawable/transselect"
    android:minHeight="80dp"
    android:orientation="vertical"
    android:paddingBottom="2dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:background="@drawable/select"
        android:id="@+id/tv_list_item_base"
        android:minHeight="80dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/title"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/description"
            android:textColor="#bbbbbb"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text=""
            android:textColor="#bbbbbb"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/check"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/check"
        android:paddingRight="10dp"
        android:src="@drawable/wccheck"
        android:visibility="invisible" />

    <ImageView
        android:id="@id/drag_handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/drag_tab"
        android:src="@drawable/dragtab" />

</RelativeLayout>