<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bgbase" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/apptheme_edit_text_holo_dark"
            android:inputType="text"
            android:textColor="#ffffff" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/description_opt"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/apptheme_edit_text_holo_dark"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:textColor="#ffffff" />

        <CheckBox
            android:id="@+id/show_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/color" />

        <LinearLayout
            android:id="@+id/picker_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.larswerkman.holocolorpicker.SaturationBar
                android:id="@+id/saturationbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.larswerkman.holocolorpicker.ValueBar
                android:id="@+id/valuebar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/newtaskbutton"
            android:text="@string/create_task"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>