<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:background="@color/bgbase"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgbase"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header_base"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="2dp"
            android:background="#333"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/path"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/path"
                android:textColor="#ffffff"
                android:textSize="12sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#FF00FF00" />

            <TextView
                android:id="@+id/hname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/hdescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/description"
                android:textColor="#bbbbbb"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/htimestamp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text=""
                android:textColor="#bbbbbb"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="3dp"
                    android:paddingRight="205dp"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <com.ghsoft.treetaskapp.TreeTaskProgressBar
                    android:id="@+id/completion"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="5dp"
                    android:paddingRight="5dp" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/triangle"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-35dp"
            android:paddingBottom="2dp"
            android:paddingLeft="30dp" >

            <View
                android:id="@+id/view1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/triangle" />

            <Button
                android:id="@+id/newtask"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/view1"
                android:layout_marginTop="3dp"
                android:background="@drawable/newtaskbutton"
                android:text="@string/add_task"
                android:textColor="#ffffff" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>